# restaurant_reservation

./: Dockerfile  pyproject.toml  test.db
app/: main.py
app/api/: auth.py  restaurant.py  views.py
app/core/: security.py
app/db/: database.py
app/models/: comment.py  rating.py  reservation.py  restaurant.py  user.py
app/schemas/: comment.py  rating.py  reservation.py  restaurant.py  user.py
app/templates/: add_restaurant.html  add_restaurant_form.html  dashboard_client.html  dashboard_host.html  edit_restaurant.html  host_reservations.html  index.html  login.html  my_reservations.html  profile.html  register.html  reservation_form.html  restaurant_detail.html
